--- a/Views/Modulo/Edit.cshtml
+++ b/Views/Modulo/Edit.cshtml
@@ -14,6 +14,7 @@
     bool sqlmap = Model.SQLMAP != null;
     bool wifite = Model.WIFITE != null;
     bool opendoor = Model.OPENDOOR != null;
+    bool wascan = Model.WASCAN != null;
 }
 
 
@@ -1976,5 +1977,161 @@
                                 </div>
  </div>
                             </form>
+}
+@* -----WASCAN----- *@
+    if (wascan)
+    {
+        <h2><em>Modifica modulo</em><strong> @(Model.WASCAN.Nome)</strong></h2>
+        <hr />
+         <form asp-action="Edit" name="wascanForm">
+                                <input type="hidden" asp-for="@Model.WASCAN.Applicazione" value="@webmva.Models.APPLICAZIONE.WASCAN" />
+<input type="hidden" asp-for="@Model.WASCAN.ID" />
+                                  <div class="row panel panel-default panel-body">
+
+                                <div class="col-sm-12">
+                                    <div class="col-sm-7" style="margin:0 auto; float:none">
+                                        <div class="form-group">
+                                            <h4 asp-for="@(Model.WASCAN.Nome)">Nome Modulo</h4>
+                                            <input class="form-control" asp-for="@(Model.WASCAN.Nome)" />
+                                        </div>
+                                    </div>
+
+                                    <hr />
+                                    <div class="col-sm-12">
+                                        <div class="col-sm-12">
+                                            <div class="col-sm-7" style="margin:0 auto; float:none">
+                                                <div class="form-group row">
+                                                    <h4 asp-for="@(Model.WASCAN.ComandoPersonalizzato)">Comando Personalizzato</h4>
+                                                    <input class="form-control" asp-for="@(Model.WASCAN.ComandoPersonalizzato)" />
+                                                </div>
+
+                                            </div>
+<hr/>
+                                        </div>
+
+                                    </div>
+                                    <div class="col-sm-12">
+                                        <h4>Tipi di enumerazione</h4>
+                                        <hr />
+                                       
+                                         <div class="col-sm-12">
+                                          
+                                                        <div class="col-sm-4">
+                                                            <label class="control-label">
+                                                                <input type="checkbox" asp-for="@Model.WASCAN.ReagentW" /> Reagent (-r)
+                                                            </label>
+                                                        </div>
+                                                    
+                                                   
+                                                        <div class="col-sm-4">
+                                                            <label class="control-label">
+                                                                <input type="checkbox" asp-for="@Model.WASCAN.VerbositàW" /> Verbosità (-v)
+                                                            </label>
+                                                        </div>
+                                                    
+                                                   
+                                                        <div class="col-sm-4">
+                                                            <label class="control-label">
+                                                                <input type="checkbox" asp-for="@Model.WASCAN.RedirectW" /> Redirect (-n)
+                                                            </label>
+                                                        </div>
+                                                    
+                                                    </div>
+                                                    <br><br><br>
+                                                  
+                                                    <div class="form-group row">
+                                            <div class="col-sm-5">
+                                                <label class="control-label">Scegli il metodo</label>
+                                            </div>
+                                            <select class="col-sm-5" asp-for="@Model.WASCAN.MethodsW">
+                                                <option value="1">POST</option>
+                                                <option value="0">GET</option> 
+                                            </select>
+                                        </div>
+                                        <div class="form-group row">
+                                            
+                                            <div class="col-sm-5">
+                                                <label class="control-label"> Settaggio Timeout</label>
+                                            </div>
+
+                                            <input class="col-sm-5" type="number" asp-for="@Model.WASCAN.TimeoutW" />
+                                            <div class="col-sm-3"></div>
+                                        </div>
+                                        
+                                         <div class="col-sm-12">
+<hr />
+                                            <h4>
+                                                Seleziona i moduli desiderati (esempi: [1] or [2,3])
+                                            </h4>
+                                            <hr />
+                                           
+                                                <div class="col-sm-12">
+                                                    <div class="col-sm-6">
+                                                    <div class="form-group row">
+                                                        <div class="col-sm-6">
+                                                            <label class="control-label">
+                                                                <input type="checkbox" asp-for="@Model.WASCAN.Fingerprint" /> Fingerprint (0)
+                                                            </label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <div class="col-sm-6">
+                                                            <label class="control-label">
+                                                                <input type="checkbox" asp-for="@Model.WASCAN.Attacks" /> Attacks (1)
+                                                            </label>
+                                                        </div>
+                                                    </div>
+                                                    
+                                                </div>
+                                            
+                                            <div class="col-sm-6">
+                                               <div class="form-group row">
+                                                        <div class="col-sm-6">
+                                                            <label class="control-label">
+                                                                <input type="checkbox" asp-for="@Model.WASCAN.Audit" /> Audit (2)
+                                                            </label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <div class="col-sm-6">
+                                                            <label class="control-label">
+                                                                <input type="checkbox" asp-for="@Model.WASCAN.Bruteforce" />  Bruteforce (3)
+                                                            </label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <div class="col-sm-6">
+                                                            <label class="control-label">
+                                                                <input type="checkbox" asp-for="@Model.WASCAN.Disclosure" /> Disclosure (4)
+                                                            </label>
+                                                        </div>
+                                                    </div>
+
+                                            </div>
+                                            </div>
+
+                                        
+                                   
+                                   <div class="col-sm-12">
+                                            <hr/>
+                                            <div class="col-sm-5">
+                                                <div clas="form-group row">
+                                                 <a href="https://github.com/m4ll0k/WAScan"target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
+                                        consulta il documentazione di WASCAN</a>
+                                        </div>
+                                        </div>
+                                        <div class="col-sm-1"></div>
+                                        <div class="col-sm-6 text-right">
+                                            <div class="form-group row">
+                                                <input type="submit" asp-action="Edit" asp-route-id="@Model.WASCAN.ID" class="btn btn-default" value="Salva" />&nbsp;&nbsp; |
+                                                <a asp-action="Index"> Torna alla lista</a>
+                                            </div>
+                                        </div>
+                                        </div>
+                                </div>
+</div>
+</div>
+                            </form>
+
 }
 }
