--- a/Views/Progetto/Details.cshtml
+++ b/Views/Progetto/Details.cshtml
@@ -12,6 +12,7 @@ var contInfoga = 0;
 var contInfogaEmail = 0;
 var contSublist3r = 0;
 var contWapiti = 0;
+var contWascan = 0;
 var contSqlmap = 0; 
 var contWifite = 0;
 var contOpendoor = 0;
@@ -78,6 +79,7 @@ var contOpendoor = 0;
                             if(item.Modulo is webmva.Models.ModuloINFOGAEMAIL){contInfogaEmail++;}
                             if(item.Modulo is webmva.Models.ModuloSUBLIST3R) {contSublist3r++;}
                             if(item.Modulo is webmva.Models.ModuloWAPITI) {contWapiti++;}
+                            if(item.Modulo is webmva.Models.ModuloWASCAN) {contWascan++;} 
                             if(item.Modulo is webmva.Models.ModuloSQLMAP) {contSqlmap++;}
                             if(item.Modulo is webmva.Models.ModuloWIFITE) {contWifite++;}
                             if(item.Modulo is webmva.Models.ModuloOPENDOOR) {contOpendoor++;}
@@ -404,6 +406,34 @@ var contOpendoor = 0;
                         @foreach (var item in Model.ModuliProgetto) {
                             
                                 @if(item.Modulo is webmva.Models.ModuloWAPITI){
+                                <tr>
+                                <td></td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Modulo.Nome)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Modulo.Comando)
+                                    </td>
+                                </tr>
+                               
+                                }
+                                }
+                                </table>
+                                </dd>    
+                        } 
+                         @if(contWascan!=0){
+                                
+                            <dd>Wascan</dd>
+                            <dd>
+                            <table class="table">
+                                <tr>
+                                    <th> </th>
+                                    <th>Modulo</th>
+                                    <th>Comando</th>
+                                </tr>
+                        @foreach (var item in Model.ModuliProgetto) {
+                            
+                                @if(item.Modulo is webmva.Models.ModuloWASCAN){
                                 <tr>
                                 <td></td>
                                     <td>
