--- a/Views/Modulo/Details.cshtml
+++ b/Views/Modulo/Details.cshtml
@@ -53,7 +53,7 @@
                      <br>
                     <div class="form-group">
                         <a class="btn btn-default" asp-action="Edit" asp-route-id="@Model.ID" >   Modifica </a>&nbsp;&nbsp;&nbsp; | &nbsp;
-                         <a class="btn btn-default" asp-action="Cancel" asp-route-id="@Model.ID" >  Cancella </a>&nbsp;&nbsp;&nbsp; | &nbsp;
+                         <a class="btn btn-default" asp-action="Delete" asp-route-id="@Model.ID" >  Cancella </a>&nbsp;&nbsp;&nbsp; | &nbsp;
                         <a asp-action="Index">  Torna alla lista</a>
                     </div>
                 </div>
