--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -96,6 +96,17 @@
               </div>
 
           <div class="col-sm-9 ">
+              <!--<div class="col-5">-->
+              <div class="panel panel-default">
+                  <div class="panel-heading">
+                      <strong>
+                          Verifica dei servizi
+                      </strong>
+                  </div>
+                  <div class="panel-body">
+
+                  </div>
+              </div>
 
 
               <!--<div class="col-5">-->
